--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,9 @@ jobs:
         go-version: 1.18
 
     - name: Build
+      working-directory: ./server
       run: go build -v ./...
 
     - name: Test
+      working-directory: ./server
       run: go test -v ./...
