--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Server
 
 on:
   push:
@@ -28,3 +28,7 @@ jobs:
     - name: Test
       working-directory: ./server
       run: go test -v ./...
+
+    - name: Build the Docker image
+      working-directory: ./server
+      run: docker build . --file Dockerfile --tag hippo:$(date +%s)
