Added deploy container action

--- a/.github/workflows/database.yml
+++ b/.github/workflows/database.yml
@@ -16,4 +16,4 @@ jobs:
 
     - name: Build the Docker image
       working-directory: ./database
-      run: docker build . --file Dockerfile --tag hippo-db:$(date +%s)
+      run: docker build . --file Dockerfile --tag hippo-db
