Added MySQL driver, added ping service

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql
-ENV MYSQL_ROOT_PASSWORD hippodbpassword
+ENV MYSQL_ROOT_PASSWORD hippomysqlpassword
 COPY recreate.sql /docker-entrypoint-initdb.d
 EXPOSE 3306
