--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,62 @@
+## Server ##
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+server/*.exe
+server/*.exe~
+server/*.dll
+server/*.so
+server/*.dylib
 
 # Test binary, built with `go test -c`
-*.test
+server/*.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+server/*.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
-go.work
+server/go.work
 
 # Log files
-*.log
+server/*.log
+
+# VS Code settings
+.vscode
+
+
+## UI ##
+# dependencies
+app/node_modules
+app/.pnp
+app/.pnp.js
+
+# testing
+app/coverage
+
+# next.js
+app/.next/
+app/out/
+
+# production
+app/build
+
+# misc
+app/.DS_Store
+*.pem
+
+# debug
+app/npm-debug.log*
+app/yarn-debug.log*
+app/yarn-error.log*
+app/.pnpm-debug.log*
+
+# local env files
+app/.env*.local
+
+# vercel
+app/.vercel
+
+# typescript
+*.tsbuildinfo
+app/next-env.d.ts
